--- a/src/assets/css/mixin.scss
+++ b/src/assets/css/mixin.scss
@@ -82,7 +82,7 @@
     background-image: url($url + '_qq.png');
   }
   [data-theme=theme2] & {
-    background-image: url($url + '_it666.png');
+    background-image: url($url + '_163.png');
   }
   background-size: cover;
   background-repeat: no-repeat;
@@ -100,10 +100,10 @@
     background-image: url($url + '_qq@3x.png');
   }
   [data-theme=theme2][data-dpr='2'] & {
-    background-image: url($url + '_it666@2x.png');
+    background-image: url($url + '_163@2x.png');
   }
   [data-theme=theme2][data-dpr='3'] & {
-    background-image: url($url + '_it666@3x.png');
+    background-image: url($url + '_163@3x.png');
   }
 
 }
